GNOME Bugzilla – Bug 706802
Missing docs for GTK_PRINT_SETTINGS_OUTPUT_DIR and GTK_PRINT_SETTINGS_OUTPUT_BASENAME
Last modified: 2013-08-31 16:28:04 UTC
These two constants were added at GTK+ 3.6 but documentation about them are missing.
Created attachment 253141 [details] [review] printsettings: Add missing docs for output constants GTK_PRINT_SETTINGS_OUTPUT_DIR and GTK_PRINT_SETTINGS_OUTPUT_BASENAME doesn't have documentation.
Review of attachment 253141 [details] [review]: Looks good, thanks
Attachment 253141 [details] pushed as 0c19be8 - printsettings: Add missing docs for output constants